# work_tools

./: .gitignore  404.html  LICENSE  README-cn.md  README-en.md  README.md  development.html  github.py  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml
.github/workflows/: main.yml
.husky/: commit-msg
development/: index.html
docs/: development.md  index.md
docs/folder/: folder_file_counter.md
folder/: folder_file_counter.html
search/: search_index.json
src/work_tools/: __init__.py
src/work_tools/folder/: folder_file_counter.py
tests/: test_version.py
tests/test_folder/: test_folder_file_counter.py
